fixed formatting issue

--- a/static/documentation/raisin_master/v_0_0_0/genindex.html
+++ b/static/documentation/raisin_master/v_0_0_0/genindex.html
@@ -1,13 +1,11 @@
 
 
-
 <!DOCTYPE html>
 <html class="writer-html5" lang="en" data-content_root="./">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Index &mdash; Raisin Build &amp; Package Management 0.0.0 documentation</title>
-    <base href="./">
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
@@ -90,7 +88,7 @@
     --help
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -99,7 +97,7 @@
     -h
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -112,7 +110,7 @@
     build
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-build">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-build">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-build">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -125,7 +123,7 @@
     help
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -138,7 +136,7 @@
     install
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-install">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-install">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-install">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -151,19 +149,19 @@
     raisin.py command line option
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">--help</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">--help</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">-h</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">-h</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-build">build</a>, <a href="usage.html#cmdoption-raisin.py-arg-build">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-build">build</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">help</a>, <a href="usage.html#cmdoption-raisin.py-arg-help">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-help">help</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-install">install</a>, <a href="usage.html#cmdoption-raisin.py-arg-install">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-install">install</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-release">release</a>, <a href="usage.html#cmdoption-raisin.py-arg-release">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-release">release</a>
 </li>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-setup">setup</a>, <a href="usage.html#cmdoption-raisin.py-arg-setup">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-setup">setup</a>
 </li>
       </ul></li>
   </ul></td>
@@ -172,7 +170,7 @@
     release
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-release">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-release">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-release">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
@@ -185,7 +183,7 @@
     setup
 
       <ul>
-        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-setup">raisin.py command line option</a>, <a href="usage.html#cmdoption-raisin.py-arg-setup">[1]</a>
+        <li><a href="sections/usage.html#cmdoption-raisin.py-arg-setup">raisin.py command line option</a>
 </li>
       </ul></li>
   </ul></td>
