--- a/static/documentation/raisin_master/v_0_0_0/genindex.html
+++ b/static/documentation/raisin_master/v_0_0_0/genindex.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; Raisin Build &amp; Package Management 0.0.0 documentation</title>
+  <title>Index &mdash; Raisin Master - Build &amp; Package Management 0.0.0 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
@@ -29,7 +29,8 @@
           
           
           <a href="index.html" class="icon icon-home">
-            Raisin Build & Package Management
+            Raisin Master - Build & Package Management
+              <img src="_static/logo_f2-02.png" class="logo" alt="Logo"/>
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -52,7 +53,7 @@
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap"><nav class="wy-nav-top" aria-label="Mobile navigation menu" >
           <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-          <a href="index.html">Raisin Build & Package Management</a>
+          <a href="index.html">Raisin Master - Build & Package Management</a>
       </nav>
 
       <div class="wy-nav-content">
