--- a/static/documentation/raisin/v_0_1_2/sections/Ros2MessagesRaisinInterfaces.html
+++ b/static/documentation/raisin/v_0_1_2/sections/Ros2MessagesRaisinInterfaces.html
@@ -342,7 +342,7 @@
 - Fields:</p>
 <blockquote>
 <div><ul class="simple">
-<li><p><code class="docutils literal notranslate"><span class="pre">float64</span> <span class="pre">timestamp</span></code></p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">builtin_interfaces/Time</span> <span class="pre">timestamp</span></code></p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">ActuatorState[]</span> <span class="pre">actuator_states</span></code></p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">float64[3]</span> <span class="pre">base_pos</span></code></p></li>
 <li><p><code class="docutils literal notranslate"><span class="pre">float64[4]</span> <span class="pre">base_quat</span></code></p></li>
